--- a/index.html
+++ b/index.html
@@ -4,14 +4,8 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <title>GFL Shikikan</title>
   <meta http-equiv="refresh" content="0; URL='/logistics'" />
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <script>
-    (adsbygoogle = window.adsbygoogle || []).push({
-      google_ad_client: "ca-pub-7592334054841641",
-      enable_page_level_ads: true
-    });
-  </script>
 </head>
 <body>
+  <script>window.location.href='/logistics'</script>
 </body>
 </html>
